Make Editor::appliedEditing update layout before changing selection

Updating frame selection currently requires clean layout, as it calls
mostBackwardCaretPosition through SelectionAdjuster. One code path that
violates it is from Editor::appliedEditing, which is fixed by this patch.

BUG=679616

Review-Url: https://codereview.chromium.org/2626933002
Cr-Commit-Position: refs/heads/master@{#442881}

Former-commit-id: c9297ecbd87ae09ce5f315c0ae5718cf9a4aabf0